minor grammer change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Stephen Bartlett</h1>
         <p class="lead">
         👋
-          I'm a consultant and software engineer who has always loved writing code. Lucky for me it's what
+          I'm a consultant and software engineer who has always loved writing code. Lucky for me, it's what
           I get paid to do.
         </p>
         <p>
