--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Stephen Bartlett</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140428019-1"></script>
 </head>
 
 <body>
@@ -51,5 +52,12 @@
         </section>
     </main>
 </body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-140428019-1');
+</script>
 </html>
