--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           I get paid to do.
         </p>
         <p>
-          Currently, I help organisations (big and small) build great digital products as a
+          Currently, I help customers of all shapes and sizes build great products as a
           Princiapal Consultant for <a href="https://www.dius.com.au">DiUS</a> in Melbourne, Australia.
         </p>
         <p>
