Minor style and content update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           I get paid to do.
         </p>
         <p>
-          Currently, I help customers of all shapes and sizes build great products as a
+          Currently, I help customers of all shapes and sizes build and launch great new products as a
           Princiapal Consultant for <a href="https://www.dius.com.au">DiUS</a> in Melbourne, Australia.
         </p>
         <p>
@@ -28,7 +28,7 @@
           Outside work, I hack on code, ski the mountains and cycle the roads.
         </p>
         <section>
-            <h1>Links</h1>
+            <h2>Links</h2>
             <ul>
                 <li>
                     <a href="mailto:stephenb@rtlett.org?subject=Hi, Steve!">E-mail</a>
