Fixed a typo and tweaked some text

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h1>Stephen Bartlett</h1>
         <p class="lead">
         👋
-          I'm a consultant and software engineer who has always loved writing code. Lucky for me, it's what
-          I get paid to do.
+          I'm a consultant and software engineer who has always loved writing code. Luckily, software
+          engineering is a never ending journey that I enjoy traveling.
         </p>
         <p>
           Currently, I help customers of all shapes and sizes build and launch great new products as a
-          Princiapal Consultant for <a href="https://www.dius.com.au">DiUS</a> in Melbourne, Australia.
+          Principal Consultant for <a href="https://www.dius.com.au">DiUS</a> in Melbourne, Australia.
         </p>
         <p>
           I'm also the creator of a product used by some of the leading tech consultancies in Australia called
