Updates for new role
Signed-off-by: Stephen Bartlett <stephenb@rtlett.org>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Stephen Bartlett</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140428019-1"></script>
 </head>
 
 <body>
@@ -13,15 +12,11 @@
         <h1>Stephen Bartlett</h1>
         <p class="lead">
         👋
-          I'm a consultant and software engineer who has always loved writing code. Luckily, software
-          engineering is a never ending journey that I enjoy traveling.
+          I'm a CTO for an early stage startup, figuring out how to hit business milestones using technology.
         </p>
         <p>
-          Currently, I help customers of all shapes and sizes build and launch great new products as a
-          Principal Consultant for <a href="https://www.dius.com.au">DiUS</a> in Melbourne, Australia.
-        </p>
-        <p>
-          I'm also the creator of a product used by some of the leading tech consultancies in Australia called
+         Mostly it's about making tradeoffs and finding a  way to get 80% of the benefit for 20% of the cost.
+         I am also the creator of a product used by some of the leading tech consultancies in Australia called
           <a href="https://precise.io" target="_blank">Precise</a>
         </p>
         <p>
@@ -30,6 +25,9 @@
         <section>
             <h2>Links</h2>
             <ul>
+                <li>
+                    <a href="https://www.programa.com.au">Programa</a>
+                </li>
                 <li>
                     <a href="mailto:stephenb@rtlett.org?subject=Hi, Steve!">E-mail</a>
                 </li>
@@ -48,16 +46,11 @@
                 <li>
                     <a href="https://twitter.com/srbartlett">Twitter</a>
                 </li>
+                <li>
+                    <a href="https://precise.io">Precise</a>
+                </li>
             </ul>
         </section>
     </main>
 </body>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-140428019-1');
-</script>
 </html>
