Updates for new things happening
Signed-off-by: Stephen Bartlett <stephenb@rtlett.org>

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
           I'm a CTO for an early stage startup, figuring out how to hit business milestones using technology.
         </p>
         <p>
-         Mostly it's about making tradeoffs and finding a  way to get 80% of the benefit for 20% of the cost.
+         Mostly it's about making tradeoffs and finding a way to get 80% of the benefit for 20% of the cost.
         </p>
         <p>
          I am also the creator of a product used by some of the leading tech consultancies in Australia called
           <a href="https://precise.io" target="_blank">Precise</a>
         </p>
+        <p>
+          In September 2022, I became a research Fellow for RMIT University’s Centre for Future Skills and Workforce Transformation.
         <p>
           Outside work, I hack on code, ski the mountains and cycle the roads.
         </p>
@@ -35,6 +37,9 @@
                 </li>
                 <li>
                     <a href="https://linkedin.com/in/srbartlett">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://srbartlett.substack.com">Substack</a>
                 </li>
                 <li>
                     <a href="https://github.com/srbartlett/manager-README">Manager README</a>
